[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topo-anomaly"
version = "0.1.0"
description = "Topological anomaly detection for network telemetry using giotto-tda (persistent homology, Betti numbers, Takens embedding)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "topo-net-anomaly contributors"}]
keywords = [
  "topological-data-analysis",
  "persistent-homology",
  "betti-numbers",
  "takens-embedding",
  "anomaly-detection",
  "network-telemetry",
  "giotto-tda",
  "time-series",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy>=1.22",
  "scipy>=1.8",
  "scikit-learn>=1.1",
  "giotto-tda>=0.6.0",
  "matplotlib>=3.5",
]

[project.optional-dependencies]
umap = ["umap-learn>=0.5.3"]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "hypothesis>=6.0",
]

[project.urls]
Homepage = "https://github.com/your-org/topo-net-anomaly"
Documentation = "https://github.com/your-org/topo-net-anomaly#readme"
Issues = "https://github.com/your-org/topo-net-anomaly/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
topo_anomaly = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --tb=short"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
